--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -6,6 +6,11 @@ on:
     - cron: "0 9 * * *"
   workflow_dispatch:
 
+permissions:
+  issues: write
+  pull-requests: write
+  discussions: write
+
 jobs:
   lock:
     name: 🔒 Lock closed issues and PRs
@@ -14,14 +19,15 @@ jobs:
       - uses: dessant/lock-threads@v5.0.1
         with:
           github-token: ${{ github.token }}
-          issue-lock-inactive-days: "30"
+          add-issue-labels: 'outdated'
+          issue-inactive-days: "90"
           issue-lock-reason: ""
           issue-comment: >
             Issue closed and locked due to lack of activity.
 
             If you encounter this same issue, please open a new issue and refer
             to this closed one.
-          pr-lock-inactive-days: "1"
+          pr-inactive-days: "90"
           pr-lock-reason: ""
           pr-comment: >
             Pull Request closed and locked due to lack of activity.
