chore(feat): webui

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # OpenShift configuration
-startpage.openshift.enabled=true
+startpage.openshift.enabled=false
 
 # Hajimari configuration
 startpage.hajimari.enabled=true
@@ -8,3 +8,8 @@ quarkus.micrometer.export.prometheus.enabled=true
 quarkus.micrometer.export.prometheus.path=metrics
 quarkus.cache.caffeine.metrics-enabled=true
 quarkus.cache.caffeine.expire-after-write=30s
+
+quarkus.quinoa.package-manager-install.node-version=20.11.1
+quarkus.quinoa.package-manager-install.npm-version=10.8.1
+quarkus.quinoa.dev-server.port=3000
+quarkus.quinoa.build-dir=dist
