enable manual run

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ on:
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main" ]
-  workflow_run:
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
