chore(documentation): Rename project to Startpunkt (#31)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # OpenShift configuration
-startpage.openshift.enabled=false
+startpunkt.openshift.enabled=false
 
 # Hajimari configuration
-startpage.hajimari.enabled=true
+startpunkt.hajimari.enabled=true
 
 quarkus.micrometer.export.prometheus.enabled=true
 quarkus.micrometer.export.prometheus.path=metrics
