chore(fix): group github-actions together

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,10 @@
     ":dependencyDashboard",
     ":semanticCommits"
   ],
-  "major": {
-    "dependencyDashboardApproval": true
-  }
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["github-actions"],
+      "groupName": "github-actions"
+    }
+  ]
 }
