chore(fix): fix typo in renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
   "packageRules": [
     {
       "matchPackagePatterns": ["github-actions"],
-      "groupName": "github-actions"
+      "groupName": "github-tags"
     }
   ]
 }
