--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,8 @@ quarkus.cache.caffeine.expire-after-write=30s
 
 quarkus.quinoa.package-manager-install.node-version=20.11.1
 quarkus.quinoa.package-manager-install.npm-version=10.8.1
-quarkus.quinoa.dev-server.port=3000
-quarkus.quinoa.build-dir=build
+quarkus.quinoa.package-manager-install.pnpm-version=8.15.3
+quarkus.quinoa.package-manager=npm
+
+quarkus.quinoa.dev-server.port=5174
+quarkus.quinoa.build-dir=dist
