--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -1,46 +1,23 @@
 {
   "name": "webui",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@iconify/react": "^5.0.1",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "sass": "^1.77.6",
-    "typescript": "^4.9.5",
-    "web-vitals": "^4.0.0"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@preact/compat": "^17.1.2",
+    "bootstrap": "^5.3.3",
+    "preact": "^10.22.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@iconify/react": "^5.0.1",
+    "@preact/preset-vite": "^2.8.3",
+    "sass": "^1.77.6",
+    "vite": "^5.3.2"
   }
 }
