--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,14 +5,9 @@ concurrency:
   cancel-in-progress: false
 
 on:
-  schedule:
-    - cron: "15 1 * * 1"
-  push:
-    branches:
-      - main
   workflow_dispatch:
   release:
-    types: [published]
+    types: [released]
 
 env:
   # Use docker.io for Docker Hub if empty
