--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ quarkus.quinoa.package-manager=npm
 
 quarkus.quinoa.dev-server.port=5174
 quarkus.quinoa.build-dir=dist
+
+quarkus.helm.name=startpunkt
+quarkus.helm.description=Deploy the Startpunkt application
+quarkus.container-image.registry=quay.io
+quarkus.container-image.group=ullbergm
+quarkus.container-image.name=startpunkt
+quarkus.container-image.tag=latest
