--- a/charts/startpunkt/templates/serviceaccount.yaml
+++ b/charts/startpunkt/templates/serviceaccount.yaml
@@ -6,4 +6,4 @@ metadata:
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/version: 0.5.0
-  name: startpunkt
+  name: {{ .Values.serviceAccountName }}
