--- a/charts/startpunkt/templates/rolebinding.yaml
+++ b/charts/startpunkt/templates/rolebinding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: startpunkt
+  name: startpunkt-role
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/version: 0.5.0
@@ -20,15 +20,15 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: startpunkt
+  name: startpunkt-rolebinding
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/version: 0.5.0
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: startpunkt
+  name: startpunkt-role
 subjects:
 - kind: ServiceAccount
-  name: startpunkt
+  name: {{ .Values.serviceAccountName }}
   namespace: startpunkt
