fix(code): Fix namespace reference

--- a/charts/startpunkt/templates/rolebinding.yaml
+++ b/charts/startpunkt/templates/rolebinding.yaml
@@ -31,4 +31,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.serviceAccountName }}
-  namespace: startpunkt
+  namespace: {{.Release.Namespace}}
