chore(fix): fix image registry

--- a/charts/startpunkt/values.yaml
+++ b/charts/startpunkt/values.yaml
@@ -1,6 +1,6 @@
 ---
 app:
-  image: quay.io/ullbergm/startpunkt:v0.5.0
+  image: ghcr.io/ullbergm/startpunkt:v0.5.0
   livenessProbe:
     failureThreshold: 3
     httpGet:
