extend the timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ quarkus.container-image.registry=quay.io
 quarkus.container-image.group=ullbergm
 quarkus.container-image.name=startpunkt
 quarkus.container-image.tag=latest
+
+quarkus.http.test-timeout=60s
