--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,16 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    ":dependencyDashboard",
-    ":semanticCommits"
-  ],
-  "packageRules": [
-    {
-      "matchManagers": ["github-actions"],
-      "groupName": "github-actions"
-    }
-  ]
+   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+   "extends": [
+      "config:recommended",
+      ":dependencyDashboard",
+      ":semanticCommits"
+   ],
+   "packageRules": [
+      {
+         "matchManagers": [
+            "github-actions"
+         ],
+         "groupName": "github-actions"
+      }
+   ]
 }
