--- a/.github/workflows/meta-labeler.yml
+++ b/.github/workflows/meta-labeler.yml
@@ -10,6 +10,10 @@ jobs:
   labeler:
     name: ♻️ Sync labels
     runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v4
