--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -20,3 +20,5 @@ jobs:
         uses: micnncim/action-label-syncer@v1.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          manifest: .github/labels.yml
