--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -43,7 +43,9 @@
   color: "ffc300"
 - name: renovate/helm
   color: "ffc300"
-- name: renovate/node
+- name: renovate/js
+  color: "ffc300"
+- name: renovate/go
   color: "ffc300"
 # Semantic Type
 - name: type/patch
