--- a/renovate.json
+++ b/renovate.json
@@ -5,12 +5,247 @@
       ":dependencyDashboard",
       ":semanticCommits"
    ],
+   "commitMessageTopic": "{{depName}}",
+   "commitMessageExtra": "to {{newVersion}}",
+   "commitMessageSuffix": "",
    "packageRules": [
+      {
+         "matchDatasources": [
+            "helm"
+         ],
+         "commitMessageTopic": "chart {{depName}}"
+      },
+      {
+         "matchDatasources": [
+            "docker"
+         ],
+         "commitMessageTopic": "image {{depName}}"
+      },
+      {
+         "matchDatasources": [
+            "go",
+            "golang-version"
+         ],
+         "matchUpdateTypes": [
+            "major"
+         ],
+         "commitMessagePrefix": "feat(go)!: "
+      },
+      {
+         "matchDatasources": [
+            "go",
+            "golang-version"
+         ],
+         "matchUpdateTypes": [
+            "minor"
+         ],
+         "semanticCommitType": "feat",
+         "semanticCommitScope": "go"
+      },
+      {
+         "matchDatasources": [
+            "go",
+            "golang-version"
+         ],
+         "matchUpdateTypes": [
+            "patch"
+         ],
+         "semanticCommitType": "fix",
+         "semanticCommitScope": "go"
+      },
+      {
+         "matchDatasources": [
+            "npm"
+         ],
+         "matchUpdateTypes": [
+            "major"
+         ],
+         "commitMessagePrefix": "feat(js)!: "
+      },
+      {
+         "matchDatasources": [
+            "npm"
+         ],
+         "matchUpdateTypes": [
+            "minor"
+         ],
+         "semanticCommitType": "feat",
+         "semanticCommitScope": "js"
+      },
+      {
+         "matchDatasources": [
+            "npm"
+         ],
+         "matchUpdateTypes": [
+            "patch"
+         ],
+         "semanticCommitType": "fix",
+         "semanticCommitScope": "js"
+      },
+      {
+         "matchDatasources": [
+            "docker"
+         ],
+         "matchUpdateTypes": [
+            "major"
+         ],
+         "commitMessagePrefix": "feat(container)!: "
+      },
+      {
+         "matchDatasources": [
+            "docker"
+         ],
+         "matchUpdateTypes": [
+            "minor"
+         ],
+         "semanticCommitType": "feat",
+         "semanticCommitScope": "container"
+      },
+      {
+         "matchDatasources": [
+            "docker"
+         ],
+         "matchUpdateTypes": [
+            "digest",
+            "patch"
+         ],
+         "semanticCommitType": "fix",
+         "semanticCommitScope": "container"
+      },
+      {
+         "matchDatasources": [
+            "github-releases",
+            "github-tags"
+         ],
+         "matchUpdateTypes": [
+            "major"
+         ],
+         "commitMessagePrefix": "feat(github-release)!: "
+      },
+      {
+         "matchDatasources": [
+            "github-releases",
+            "github-tags"
+         ],
+         "matchUpdateTypes": [
+            "minor"
+         ],
+         "semanticCommitType": "feat",
+         "semanticCommitScope": "github-release"
+      },
+      {
+         "matchDatasources": [
+            "github-releases",
+            "github-tags"
+         ],
+         "matchUpdateTypes": [
+            "patch"
+         ],
+         "semanticCommitType": "fix",
+         "semanticCommitScope": "github-release"
+      },
       {
          "matchManagers": [
             "github-actions"
          ],
-         "groupName": "github-actions"
+         "matchUpdateTypes": [
+            "major"
+         ],
+         "commitMessagePrefix": "feat(github-action)!: "
+      },
+      {
+         "matchManagers": [
+            "github-actions"
+         ],
+         "matchUpdateTypes": [
+            "minor"
+         ],
+         "semanticCommitType": "feat",
+         "semanticCommitScope": "github-action"
+      },
+      {
+         "matchManagers": [
+            "github-actions"
+         ],
+         "matchUpdateTypes": [
+            "patch"
+         ],
+         "semanticCommitType": "fix",
+         "semanticCommitScope": "github-action"
+      },
+      {
+         "matchUpdateTypes": [
+            "major"
+         ],
+         "labels": [
+            "type/major"
+         ]
+      },
+      {
+         "matchUpdateTypes": [
+            "minor"
+         ],
+         "labels": [
+            "type/minor"
+         ]
+      },
+      {
+         "matchUpdateTypes": [
+            "patch"
+         ],
+         "labels": [
+            "type/patch"
+         ]
+      },
+      {
+         "matchDatasources": [
+            "docker"
+         ],
+         "addLabels": [
+            "renovate/container"
+         ]
+      },
+      {
+         "matchDatasources": [
+            "helm"
+         ],
+         "addLabels": [
+            "renovate/helm"
+         ]
+      },
+      {
+         "matchDatasources": [
+            "go",
+            "golang-version"
+         ],
+         "addLabels": [
+            "renovate/go"
+         ]
+      },
+      {
+         "matchDatasources": [
+            "npm"
+         ],
+         "addLabels": [
+            "renovate/js"
+         ]
+      },
+      {
+         "matchDatasources": [
+            "github-releases",
+            "github-tags"
+         ],
+         "addLabels": [
+            "renovate/github-release"
+         ]
+      },
+      {
+         "matchManagers": [
+            "github-actions"
+         ],
+         "addLabels": [
+            "renovate/github-action"
+         ]
       }
    ]
 }
