--- a/.github/workflows/lint-helm-chart.yml
+++ b/.github/workflows/lint-helm-chart.yml
@@ -2,8 +2,8 @@ name: Lint and Test Chart
 
 on:
   pull_request:
-    branches:
-    - main
+    paths:
+      - "charts/startpunkt/**"
   workflow_dispatch:
 
 jobs:
