--- a/.github/workflows/schedule-link-checker.yml
+++ b/.github/workflows/schedule-link-checker.yml
@@ -16,6 +16,31 @@ jobs:
     - name: ⤵️ Check out code from GitHub
       uses: actions/checkout@v4
 
-    - name: Link Checker
-      id: lychee
+    - name: Restore lychee cache
+      id: restore-cache
+      uses: actions/cache/restore@v3
+      with:
+        path: .lycheecache
+        key: cache-lychee-${{ github.sha }}
+        restore-keys: cache-lychee-
+
+    - name: Run lychee
       uses: lycheeverse/lychee-action@v1
+      id: lychee
+      with:
+          args: "--base . --cache --max-cache-age 1h ."
+
+    - name: Save lychee cache
+      uses: actions/cache/save@v3
+      if: always()
+      with:
+          path: .lycheecache
+          key: ${{ steps.restore-cache.outputs.cache-primary-key }}
+
+    - name: Create Issue From File
+      if: env.lychee_exit_code != 0
+      uses: peter-evans/create-issue-from-file@v4
+      with:
+        title: Link Checker Report
+        content-filepath: ./lychee/out.md
+        labels: report, automated issue
