--- a/.github/workflows/schedule-link-checker.yml
+++ b/.github/workflows/schedule-link-checker.yml
@@ -1,9 +1,6 @@
-name: Links
+name: Link Checker
 
 on:
-  pull_request:
-    branches:
-    - main
   repository_dispatch:
   workflow_dispatch:
   schedule:
