--- a/.github/workflows/schedule-codeowners.yml
+++ b/.github/workflows/schedule-codeowners.yml
@@ -9,7 +9,7 @@ on:
           - main
 
 jobs:
-  sanity:
+  codeowners:
     runs-on: ubuntu-latest
     steps:
       - name: ⤵️ Check out code from GitHub
@@ -19,5 +19,6 @@ jobs:
         # input parameters
         with:
           # github_access_token: "${{ secrets.OWNERS_VALIDATOR_GITHUB_SECRET }}"
+          github_access_token: "${{ secrets.GITHUB_TOKEN }}"
           checks: "files,owners,duppatterns,syntax"
           experimental_checks: "notowned,avoid-shadowing"
