--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -4,6 +4,9 @@ name: Milestone Closure
 on:
     milestone:
       types: [closed]
+    pull_request:
+        branches:
+        - main
     workflow_dispatch:
       inputs:
         milestoneId:
@@ -18,6 +21,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Create Release Notes
         uses: docker://decathlon/release-notes-generator-action:2.0.1
+        with:
+            milestoneId: 1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OUTPUT_FOLDER: temp_release_notes
