--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Create Release Notes
         uses: docker://decathlon/release-notes-generator-action:2.0.1
         with:
-            milestoneId: 1
+          github.event.inputs.milestoneId: 1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OUTPUT_FOLDER: temp_release_notes
