--- a/.github/workflows/meta-label-sync.yml
+++ b/.github/workflows/meta-label-sync.yml
@@ -1,5 +1,5 @@
 ---
-name: Sync labels
+name: Meta - Sync labels
 
 on:
   push:
@@ -17,6 +17,8 @@ jobs:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v4
       - name: 🚀 Run Label Syncer
-        uses: micnncim/action-label-syncer@v1.3.0
+        uses: micnncim/action-label-syncer@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          manifest: .github/labels.yml
