--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -11,6 +11,7 @@ area/docs:
 - all:
   - changed-files:
     - any-glob-to-any-file: "docs/**/*"
+    - any-glob-to-any-file: "README.md"
 area/frontend:
 - all:
   - changed-files:
