feat(enhancement): Add onlyAnnotated option to openshift routes

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ startpunkt:
   # OpenShift integration, read OpenShift Routes
   openshift:
     enabled: false
+    onlyAnnotated: true # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
