chore(documentation): Update documentation and add Ingress support (#78)
* Initial documentation rewrite
* Refactor application object code
* feat(enhancement): Add onlyAnnotated option to openshift routes
* Support Ingress objects

--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -8,9 +8,9 @@ area/charts:
   - changed-files:
     - any-glob-to-any-file: "charts/**/*"
 area/docs:
-- all:
-  - changed-files:
-    - any-glob-to-any-file: "docs/**/*"
+- changed-files:
+  - any-glob-to-any-file: "docs/**/*"
+  - any-glob-to-any-file: "README.md"
 area/frontend:
 - all:
   - changed-files:
