--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ repos:
           - id: check-added-large-files
           - id: trailing-whitespace
           - id: mixed-line-ending
-          - id: end-of-file-fixer
+          # - id: end-of-file-fixer
           - id: check-json
           - id: check-toml
-          - id: check-yaml
+          # - id: check-yaml
             args: ["--allow-multiple-documents", "--unsafe"]
           - id: check-case-conflict
           - id: check-executables-have-shebangs
