--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,15 @@ startpunkt:
     #   - default
     #   - startpunkt
 
+  # Kubernetes integration, read ingress resources
+  ingress:
+    enabled: true
+    onlyAnnotated: true # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+
   # OpenShift integration, read OpenShift Routes
   openshift:
     enabled: false
+    onlyAnnotated: true # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
