--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>us.ullberg</groupId>
     <artifactId>startpunkt</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.6.0</version>
 
     <properties>
         <compiler-plugin.version>3.13.0</compiler-plugin.version>
@@ -31,7 +31,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
-      <tag>v0.5.1</tag>
+      <tag>v0.6.0</tag>
   </scm>
 
     <dependencies>
