Add translation support

--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -12,7 +12,8 @@
       "@popperjs/core": "^2.11.8",
       "@preact/compat": "^17.1.2",
       "bootstrap": "^5.3.3",
-      "preact": "^10.22.0"
+      "preact": "^10.22.0",
+      "preact-i18n": "^2.4.0-preactx"
    },
    "devDependencies": {
       "@iconify/react": "^5.0.1",
