--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      checks: write
 
     steps:
       - name: ⤵️ Check out code from GitHub
@@ -34,8 +35,14 @@ jobs:
       - name: mvn clean compile
         run: $MVN clean compile
 
-      - name: mvn test -Pnative -Dquarkus.native.container-build=true
-        run: $MVN test
+      - name: mvn test
+        run: $MVN test --batch-mode --fail-at-end
+        
+      - name: Publish Test Report
+        if: success() || failure()
+        uses: scacap/action-surefire-report@v1
+        with:
+          fail_on_test_failures: true
 
       - name: mvn package -Pnative -DskipTests -Dquarkus.native.container-build=true
         run: $MVN package -Pnative -DskipTests -Dquarkus.native.container-build=true
