--- a/.github/workflows/lint-helm-chart.yml
+++ b/.github/workflows/lint-helm-chart.yml
@@ -1,3 +1,4 @@
+---
 name: Lint and Test Chart
 
 on:
@@ -15,20 +16,21 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Helm
+      - name: 🛠️ Set up Helm
         uses: azure/setup-helm@v4.2.0
         with:
           version: v3.14.4
 
-      - uses: actions/setup-python@v5
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
           check-latest: true
 
-      - name: Set up chart-testing
+      - name: 🔧 Set up chart-testing
         uses: helm/chart-testing-action@v2.6.1
 
-      - name: Run chart-testing (list-changed)
+      - name: 📝 Run chart-testing (list-changed)
         id: list-changed
         run: |
           changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
@@ -36,14 +38,14 @@ jobs:
             echo "changed=true" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: Run chart-testing (lint)
+      - name: 🧪 Run chart-testing (lint)
         if: steps.list-changed.outputs.changed == 'true'
         run: ct lint --target-branch ${{ github.event.repository.default_branch }}
 
-      - name: Create kind cluster
+      - name: 🌐 Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
         uses: helm/kind-action@v1.10.0
 
-      - name: Run chart-testing (install)
+      - name: 🚀 Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
         run: ct install --target-branch ${{ github.event.repository.default_branch }}
