--- a/.github/workflows/meta-labeler.yml
+++ b/.github/workflows/meta-labeler.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v4
-      - name: Labeler
+      - name: 🏷️ Apply labels
         uses: actions/labeler@v5
         with:
           configuration-path: .github/labeler.yaml
