--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,4 @@
+---
 name: Publish
 
 concurrency:
@@ -36,7 +37,7 @@ jobs:
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
+      - name: 🛠️ Install cosign
         uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
         with:
           cosign-release: 'v2.2.4'
@@ -44,12 +45,12 @@ jobs:
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
       # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
+      - name: 🔧 Set up Docker Buildx
         uses: docker/setup-buildx-action@4fd812986e6c8c2a69e18311145f9371337f27d4 # v3.4.0
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: 🔑 Log into registry ${{ env.REGISTRY }}
         uses: docker/login-action@0d4c9c5ea7693da7b068278f7b52bda2a190a446 # v3.2.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -58,31 +59,31 @@ jobs:
 
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
+      - name: 📝 Extract Docker metadata
         id: meta
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: jdk17
+      - name: ☕ Setup JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "adopt"
 
-      - name: mvn clean compile
+      - name: 🔄 Maven Clean Compile
         run: $MVN clean compile
 
-      - name: mvn test -Pnative -Dquarkus.native.container-build=true
-        run: $MVN test
+      - name: ✅ Run Maven Tests
+        run: $MVN test -Pnative -Dquarkus.native.container-build=true
 
-      - name: mvn package -Pnative -DskipTests -Dquarkus.native.container-build=true
+      - name: 📦 Maven Package
         if: github.ref != 'refs/heads/master'
         run: $MVN package -Pnative -DskipTests -Dquarkus.native.container-build=true
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: 🏗️ Build and Push Docker Image
         id: build-and-push
         uses: docker/build-push-action@1a162644f9a7e87d8f4b053101d1d9a712edc18c # v6.3.0
         with:
@@ -96,7 +97,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       # Sign the resulting Docker image digest.
-      - name: Sign the published Docker image
+      - name: ✍️ Sign the Published Docker Image
         env:
           # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
           TAGS: ${{ steps.meta.outputs.tags }}
@@ -105,7 +106,7 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
-      - name: Attest
+      - name: 🛡️ Attest
         uses: actions/attest-build-provenance@v1
         id: attest
         with:
