--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,22 +1,22 @@
 ---
-name: Milestone Closure
+name: 🚀 Milestone Closure
 
 on:
-    milestone:
-      types: [closed]
-    workflow_dispatch:
-      inputs:
-        milestoneId:
-            description: 'Milestone ID'
-            required: true
-            default: '1'
+  milestone:
+    types: [closed]
+  workflow_dispatch:
+    inputs:
+      milestoneId:
+        description: 'Milestone ID'
+        required: true
+        default: '1'
 
 jobs:
-    create-release-notes:
-      runs-on: ubuntu-latest
-      steps:
+  create-release-notes:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@master
-      - name: Create Release Notes
+      - name: 📝 Create Release Notes
         uses: docker://decathlon/release-notes-generator-action:3.1.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
