--- a/.github/workflows/schedule-codeowners.yml
+++ b/.github/workflows/schedule-codeowners.yml
@@ -1,9 +1,10 @@
+---
 name: "Codeowners Validator"
 
 on:
   schedule:
     # Runs at 08:00 UTC every day
-    - cron:  '0 8 * * *'
+    - cron: '0 8 * * *'
 
 jobs:
   codeowners:
@@ -11,10 +12,10 @@ jobs:
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v4
-      - name: GitHub CODEOWNERS Validator
+      - name: ✅ GitHub CODEOWNERS Validator
         uses: mszostok/codeowners-validator@v0.7.4
-        # input parameters
         with:
+          # input parameters
           # github_access_token: "${{ secrets.OWNERS_VALIDATOR_GITHUB_SECRET }}"
           github_access_token: "${{ secrets.GITHUB_TOKEN }}"
           checks: "files,duppatterns,syntax"
