--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -1,20 +1,16 @@
 ####
-# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode.
-# It uses a micro base image, tuned for Quarkus native executables.
-# It reduces the size of the resulting container image.
-# Check https://quarkus.io/guides/quarkus-runtime-base-image for further information about this image.
+# Dockerfile for building a container to run the Quarkus application in native mode.
+# Uses a micro base image optimized for Quarkus native executables.
+# For more information, visit: https://quarkus.io/guides/quarkus-runtime-base-image
 #
-# Before building the container image run:
-#
+# Build the native executable with:
 # ./mvnw package -Dnative
 #
-# Then, build the image with:
-#
+# Build the container image with:
 # docker build -f src/main/docker/Dockerfile.native-micro -t ullbergm/startpunkt .
 #
-# Then run the container using:
-#
-# docker run -i --rm -p 8080:8080 quarkus/startpunkt
+# Run the container with:
+# docker run -i --rm -p 8080:8080 ullbergm/startpunkt
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:2.0
