--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,21 +1,21 @@
 startpunkt:
   # Namespace selector determines which namespaces to look for resources in
   namespaceSelector:
-    any: true
-    # matchNames:
+    any: true  # If true, look for resources in all namespaces
+    # matchNames:  # Uncomment and specify namespace names to limit the search to specific namespaces
     #   - default
     #   - startpunkt
 
   # Kubernetes integration, read ingress resources
   ingress:
-    enabled: true
-    onlyAnnotated: true # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+    enabled: true  # If true, enable the reading of ingress resources
+    onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # OpenShift integration, read OpenShift Routes
   openshift:
-    enabled: false
-    onlyAnnotated: true # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+    enabled: false  # If true, enable the reading of OpenShift Route resources
+    onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
-    enabled: false
+    enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
