--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 startpunkt:
+  # Default protocol for links if not specified in the resource
+  defaultProtocol: "http"
+
   # Namespace selector determines which namespaces to look for resources in
   namespaceSelector:
     any: true  # If true, look for resources in all namespaces
@@ -19,3 +22,9 @@ startpunkt:
   # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
     enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
+
+  # Istio Virtual Service integration, read Istio VirtualService resources
+  istio:
+    virtualservice:
+      enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
+      onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
