style: change maven release plugin prefix to work with commit checking tool

--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,7 @@
         <configuration>
           <tagNameFormat>v@{project.version}</tagNameFormat>
           <projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
+          <scmCommentPrefix>build(release):</scmCommentPrefix>
         </configuration>
       </plugin>
     </plugins>
