fix: regression where i8n resources were not included in native builds

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ quarkus.container-image.name=startpunkt
 quarkus.container-image.tag=latest
 
 quarkus.http.test-timeout=60s
+
+quarkus.native.resources.includes=i8n/*.json
