--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,14 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.github.ferstl</groupId>
+        <artifactId>depgraph-maven-plugin</artifactId>
+        <version>4.0.3</version>
+        <configuration>
+          <graphFormat>json</graphFormat>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>net.revelc.code.formatter</groupId>
         <artifactId>formatter-maven-plugin</artifactId>
         <version>2.24.1</version>
