ci: fix sonarcube

--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -36,3 +36,7 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=magnus-ullberg
+            -Dsonar.projectKey=magnus-ullberg_startpunkt
